# polyglot-services

./: .gitignore
api-gateway/: .gitignore  Cargo.toml  api-gateway.csproj  api-gateway.http  build.gradle
api-gateway/Properties/: launchSettings.json
api-gateway/src/api/middleware/: auth_context.rs  signature.rs
api-gateway/src/main/java/com/devcraftlabs/gateway/: ApiGatewayApplication.java
api-gateway/src/main/java/com/devcraftlabs/gateway/api/auth/: AuthController.java  AuthService.java  IAuthService.java
api-gateway/src/main/java/com/devcraftlabs/gateway/api/auth/dto/request/: AuthorizeOTPRequestDTO.java  LoginRequestDTO.java  RegisterRequestDTO.java
api-gateway/src/main/java/com/devcraftlabs/gateway/api/integration/: IIntegrationService.java  IntegrationService.java
api-gateway/src/main/java/com/devcraftlabs/gateway/api/kyc/: IKYCService.java  KYCService.java
api-gateway/src/main/java/com/devcraftlabs/gateway/common/: BaseResponseDTO.java  CachedBodyHttpServletRequest.java  HmacUtilities.java  HttpMethodEnum.java  TemplateService.java
api-gateway/src/main/java/com/devcraftlabs/gateway/config/: RestTemplateConfig.java  WebClientConfig.java
api-gateway/src/main/java/com/devcraftlabs/gateway/middleware/: XTokenValidator.java
api-gateway/src/main/java/com/devcraftlabs/gateway/models/dto/: BaseResponseDTO.java
api-gateway/src/main/resources/: application-local.yml  application.properties  application.yml  banner.txt
api-gateway/src/test/java/com/devcraftlabs/gateway/: ApiGatewayApplicationTests.java
auth-service-test/: auth-service-test.csproj  (+2 more)
(+163 files in other folders)
